# llmzoomcamp

./: .env.example  .gitignore  README.md  headroom_playbook.ipynb  hw1.ipynb  pyproject.toml  rag_helper.py  test.ipynb
